@startuml rls-domain
!theme plain
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

title RLS 行级数据隔离 - 领域模型

' ═══════════════════════════════════════════
' 子域一：终端用户身份
' ═══════════════════════════════════════════
rectangle "终端用户身份子域" as IdentitySubdomain {

  package "身份聚合" <<Aggregate>> #FFFDE7 {

    class EndUserIdentity <<Value Object>> #DCEDC1 {
      --属性--
      + endUserId : EndUserID
      + issuer    : Issuer
      --行为--
      + isEndUser() : Boolean
      --不变量--
      .. issuer == MC_END_USER 才是合法的 Runtime 调用者 ..
    }

    enum Issuer <<Enum>> #E8DAEF {
      MC_DEVELOPER
      MC_END_USER
    }

    EndUserIdentity --> Issuer
  }

  class RuntimeAuthPolicy <<Domain Service>> #FAD9C1 {
    + validate(identity : EndUserIdentity) : ValidationResult
    + extractFromJWT(token : String) : EndUserIdentity
    --规则--
    .. issuer != MC_END_USER → 401 Unauthorized ..
    .. issuer == MC_END_USER → 提取 endUserId 注入 context ..
  }

}

' ═══════════════════════════════════════════
' 子域二：模型字段扩展
' ═══════════════════════════════════════════
rectangle "模型字段扩展子域" as ModelSubdomain {

  package "模型聚合（扩展）" <<Aggregate>> #FFFDE7 {

    class Model <<Aggregate Root>> #FFEAA7 {
      --标识--
      + id          : ModelID
      + name        : String
      --属性--
      + createdVia  : ModelCreationSource
      --行为--
      + isRLSEnabled() : Boolean
      + getOwnerField() : FieldDefinition?
      + getPolicy() : ModelRLSPolicy?
      + addField(def : FieldDefinition) : AddFieldResult
      + removeField(name : String) : RemoveFieldResult
      + createWithOwnerAndPolicy() : void
      --不变量--
      .. END_USER_REF 字段最多存在一个 ..
      .. END_USER_REF 字段名固定为 "owner" ..
      .. createdVia=NEW 时自动携带 owner 字段 + 默认 Policy ..
      .. createdVia=IMPORTED 时不生成 owner 字段，不创建 Policy ..
      .. 删除 owner 字段时 Policy 同步删除 ..
    }

    class FieldDefinition <<Entity>> #DFE6E9 {
      --标识--
      + name   : String
      --属性--
      + format : FieldFormat
      --行为--
      + isOwnerField() : Boolean
      + isEndUserRef() : Boolean
      --不变量--
      .. isEndUserRef() == true 时 name 必须为 "owner" ..
    }

    class OwnerFieldSchema <<Value Object>> #DCEDC1 {
      --属性--
      + visibleInQueryOutput    : Boolean = true
      + visibleInMutationInput  : Boolean = false
      --语义--
      .. EndUser 视角：可见只读 ..
      .. Developer 视角：完整暴露（不使用此 VO）..
    }

    class AddFieldResult <<Value Object>> #DCEDC1 {
      + success : Boolean
      + error?  : FieldError
    }

    class RemoveFieldResult <<Value Object>> #DCEDC1 {
      + warning? : RemoveFieldWarning
    }

    class ModelRLSPolicy <<Entity>> #D5E8D4 {
      --标识--
      + modelId          : ModelID
      --属性（五件套）--
      + selectPredicate  : JsonExpr   ← SELECT USING（JSON String）
      + insertCheck      : JsonExpr   ← INSERT WITH CHECK（JSON String）
      + updatePredicate  : JsonExpr   ← UPDATE USING（JSON String）
      + updateCheck      : JsonExpr   ← UPDATE WITH CHECK（JSON String）
      + deletePredicate  : JsonExpr   ← DELETE USING（JSON String）
      --行为--
      + getPreset() : RLSPreset?
      + applyPreset(preset : RLSPreset) : void
      --不变量--
      .. 仅在 Model 有 END_USER_REF 字段时存在 ..
      .. getPreset() 返回 null 表示自定义组合 ..
      .. insertCheck / updateCheck 不允许 _exists / _ref ..
    }

    enum FieldFormat <<Enum>> #E8DAEF {
      STRING
      INTEGER
      NUMBER
      BOOLEAN
      DATETIME
      UUID
      ENUM
      RELATION
      END_USER_REF
    }

    enum ModelCreationSource <<Enum>> #E8DAEF {
      NEW
      IMPORTED
    }

    enum FieldError <<Enum>> #E8DAEF {
      END_USER_REF_ALREADY_EXISTS
    }

    enum RemoveFieldWarning <<Enum>> #E8DAEF {
      RLS_WILL_DISABLE
    }

    enum RLSPreset <<Enum>> #E8DAEF {
      READ_WRITE_OWNER
      READ_ALL_WRITE_OWNER
      READ_ALL
      READ_WRITE_ALL
      NO_ACCESS
    }

    note right of RLSPreset
      READ_WRITE_OWNER     → 五件套均为 {"owner":{"_eq":{"_auth":"uid"}}}（默认）
      READ_ALL_WRITE_OWNER → select=true, 其余={"owner":{"_eq":{"_auth":"uid"}}}
      READ_ALL             → select=true, 其余=false
      READ_WRITE_ALL       → 五件套均为 true（⚠️ 高危）
      NO_ACCESS            → 五件套均为 false
    end note

    Model "1" *-- "0..*" FieldDefinition
    Model "1" *-- "0..1" ModelRLSPolicy
    Model --> ModelCreationSource
    FieldDefinition --> FieldFormat
    FieldDefinition "1" *-- "0..1" OwnerFieldSchema
  }

  note bottom of Model
    <b>isRLSEnabled() 逻辑</b>
    存在 format=END_USER_REF 的字段 → true
    不存在 → false（无 Policy）

    <b>无 Policy = Default Deny</b>
    model.getPolicy() == nil 且 EndUser 请求 → DENY ALL
    owner 字段只是 OWNER_EQUALS_USER 谓词的依赖，不是 RLS 开关

    <b>getPolicy() 逻辑</b>
    isRLSEnabled() == true → 返回 ModelRLSPolicy
    isRLSEnabled() == false → 返回 null（DENY ALL）

    <b>removeField() 行为</b>
    删除 END_USER_REF 字段 → Policy 同步删除
    返回 RemoveFieldResult{ warning = RLS_WILL_DISABLE }
  end note

}

' ═══════════════════════════════════════════
' 子域三：运行时数据隔离
' ═══════════════════════════════════════════
rectangle "运行时数据隔离子域" as RuntimeSubdomain {

  package "RLS 聚合" <<Aggregate>> #FFFDE7 {

    class RLSFilter <<Value Object>> #DCEDC1 {
      --属性（五件套表达式）--
      + selectPredicate  : JsonExpr
      + insertCheck      : JsonExpr
      + updatePredicate  : JsonExpr
      + updateCheck      : JsonExpr
      + deletePredicate  : JsonExpr
      + fieldName        : String = "owner"
      + endUserId        : EndUserID
      --语义（USING）--
      .. true           → 不注入 WHERE ..
      .. JSON 表达式    → PolicyExecutor.ToSQL() 编译为参数化 SQL ..
      .. false          → AND 1=0（静默空集，不报错）..
      --语义（WITH CHECK）--
      .. true           → 允许写入 ..
      .. JSON 表达式    → 应用层校验，违反 → RLS_CHECK_VIOLATION ..
      .. false          → 直接 RLS_CHECK_VIOLATION ..
    }

    note right of RLSFilter
      <b>USING vs With CHECK 错误语义</b>
      USING 不通过（select/update/deletePredicate）：
        → 行"不存在"，静默过滤
        → SELECT 返回空结果（不报错）
        → UPDATE/DELETE 返回 0 行受影响（不报错）
      ──
      WITH CHECK 不通过（insert/updateCheck）：
        → 直接抛错，整个操作失败
        → 错误码：RLS_CHECK_VIOLATION
      ──
      CHECK 不允许 _exists / _ref（仅 PREDICATE 允许）
    end note

  }

  class PolicyValidator <<Domain Service>> #FAD9C1 {
    + Validate(json : String, modelSchema : ModelSchema, authSchema : AuthSchema) : []ValidationError
    --规则--
    .. JSON Schema 校验结构合法性 ..
    .. 字段名白名单校验（对照 Model 字段列表）..
    .. _auth 变量白名单校验（uid 内置 + auth_schema 声明）..
    .. _exists.model 白名单校验（已知 Model 或系统表）..
    .. insertCheck / updateCheck 不含 _exists / _ref ..
  }

  class PolicyCompiler <<Domain Service>> #FAD9C1 {
    + Compile(json : String) : CompiledPolicy
    --规则--
    .. 递归解析 JSON 为参数化 SQL 片段 ..
    .. _auth.uid → ? 占位符 ..
    .. _ref → 跨表字段引用（仅 PREDICATE）..
  }

  class PolicyExecutor <<Domain Service>> #FAD9C1 {
    + ToSQL(compiled : CompiledPolicy, authCtx : AuthContext) : (String, []Any)
    --规则--
    .. 将 CompiledPolicy 绑定运行期 authCtx 生成最终 SQL ..
    .. 返回参数化查询 + 绑定参数数组 ..
  }

  class RLSResolver <<Domain Service>> #FAD9C1 {
    + resolve(identity : EndUserIdentity, model : Model) : RLSFilter?
    --规则--
    .. identity.isEndUser() == false → null（不过滤，Developer 开放访问）..
    .. model.getPolicy() == null → DENY ALL（无 Policy = Default Deny）..
    .. 否则 → RLSFilter { 五件套 JsonExpr, endUserId } ..
  }

}

' ═══════════════════════════════════════════
' 子域四：auth_schema 配置
' ═══════════════════════════════════════════
rectangle "auth_schema 子域" as AuthSchemaSubdomain {

  class AuthSchema <<Value Object>> #DCEDC1 {
    --属性--
    + projectId : ProjectID
    + variables : AuthVariable[]
    --行为--
    + getVariable(name : String) : AuthVariable?
    + isValidRef(name : String) : Boolean
    --不变量--
    .. "uid" 内置，永远合法，不出现在 variables 列表中 ..
  }

  class AuthVariable <<Value Object>> #DCEDC1 {
    --属性--
    + name   : String    ← 变量名（如 "tenant_id"）
    + source : String    ← JWT 路径（如 "jwt.tenant_id"）
    + type   : String    ← "uuid" | "string" | "integer"
  }

  class RLSOperatorSpec <<Value Object>> #DCEDC1 {
    --描述允许矩阵--
    + operation        : String         ← "selectPredicate" 等
    + allowComparison  : Boolean = true
    + allowLogical     : Boolean = true
    + allowExists      : Boolean        ← PREDICATE=true, CHECK=false
    + allowRef         : Boolean        ← PREDICATE=true, CHECK=false
  }

  AuthSchema "1" *-- "0..*" AuthVariable
}

' ═══════════════════════════════════════════
' 跨聚合引用
' ═══════════════════════════════════════════
RuntimeAuthPolicy ..> EndUserIdentity    : 提取身份
RLSResolver        ..> EndUserIdentity   : 读取 endUserId
RLSResolver        ..> Model             : 读取 getPolicy()
RLSFilter          ..> FieldDefinition   : fieldName 来自 owner 字段
PolicyValidator    ..> AuthSchema        : 校验 _auth 变量合法性
PolicyCompiler     ..> RLSOperatorSpec   : 按允许矩阵校验操作符
PolicyExecutor     ..> AuthSchema        : 绑定运行期 auth 变量值

' ═══════════════════════════════════════════
' 待确认
' ═══════════════════════════════════════════
note "后续扩展：\n支持多个 EndUserRef 字段\n（RLS 配置页选择哪个作为 owner）" as N1 #FFEAA7

note "后续扩展：\n导入 Model 手动开启 RLS\n（添加 END_USER_REF 字段）" as N2 #FFEAA7

note "表达式系统：\nGraphQL JSON 格式\n比较/逻辑/EXISTS/_auth/_ref\n三层纯函数：Validator→Compiler→Executor" as N3 #FFEAA7

@enduml
